@@ -5,9 +5,8 @@
  All rights reserved.
 
  This program is free software; you can redistribute it and/or
- modify it under the terms of the GNU General Public License
- as published by the Free Software Foundation; either version 2
- of the License, or (at your option) any later version.
+ modify it under the terms of the GNU General Public License v2
+ as published by the Free Software Foundation.
 
  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
@@ -648,6 +647,12 @@ li.current-rating{
 #tv_left { 
 	float:left;
 }
+
+/* Localplay Styles */
+.lp_current { 
+	font-weight: bold;
+}
+
 /* User Online/Offline style, used in users.php */
 td.user_online {
 	background-color: green;
